  * Tidied up writing in the following slides:
    f-spot (streamlined discussion of tags), rhythmbox (removed
    codec licensing stuff), documentation (removed subtitles).
    (LP: #480382) (LP: #480383)
  * Consistently italicize names of applications in Ubuntu when
    referred to directly.
  * Consistently refer to applications by their names in the menu
    when directing the user to them.

 -- Dylan McCall <dylan@dylan-laptop>  Wed, 16 Dec 2009 12:50:04 -0800

ubiquity-slideshow-ubuntu (11) lucid; urgency=low

  [ Dylan McCall ]
  * Adding support for right-to-left languages (LP: #446989).
  * When #rtl is appended to URL, index.html will load the rtl.css
    stylesheet via Javascript.
  * Added link/rtl.css and link/bullet-point.rtl.png, which are
    responsible for little hacks to get right-to-left languages
    looking right.
  * Changed doctype of index.html to HTML5.

 -- Evan Dandrea <evand@ubuntu.com>  Thu, 10 Dec 2009 10:25:01 +0000

ubiquity-slideshow-ubuntu (10) karmic; urgency=low

  * Update translations from Launchpad (LP: #452889).

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 23 Oct 2009 07:52:44 +0100

ubiquity-slideshow-ubuntu (9) karmic; urgency=low

  [ Evan Dandrea ]
  * The version of Firefox shipped with Ubuntu 9.10 is 3.5, not 3.0
    (LP: #442832).
  * Add an Ubuntu One slide.
  * Freeze exception (LP: #447383).
  * Updated Ubuntu and Ubuntu One logo license (LP: #451263).
  * Updated translations from Launchpad (source package).

  [ Dylan McCall ]
  * Merged middle-tweaks branch. Freeze exception (LP: #445102)
  * New strings for firefox.html, fspot.html, rhythmbox-totem.html,
    evolution.html, empathy.html, openoffice.html, accessibility.html,
    installing-software.html.
  * Changed order of slideshow; multimedia stuff slide appears first,
    accessibility near the end, before Installing Software.
  * Breathe icons have been replaced with icons from the Humanity icon theme: